--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <title>DOM I</title>
 </head>
 
-<body>
+<body> 
+  <!-- use document.body.childNodes in terminal, and you can see the first element is text which basically tell you there is a new line here, if you delete the line between <body> and <header> and make them in same line, then the first element of document.body.childNodes would be header -->
   <header>
     <div class="logo-container">
       <img src="https://d1vki863cvir6c.cloudfront.net/uploads/topic/image/635/lambdaschool.png" alt="Lambda logo">
